# PcbRouter

./: .gitignore  .gitmodules  BoardGrid.h  CMakeLists.txt  Makefile  README.md  router.h
src/: BoardGrid.cpp  BoardGrid.h  DesignRuleChecker.cpp  DesignRuleChecker.h  GridBasedRouter.cpp  GridBasedRouter.h  GridCell.h  GridDiffPairNet.cpp  GridDiffPairNet.h  GridDiffPairNetclass.h  GridNetclass.cpp  GridNetclass.h  GridPath.cpp  GridPath.h  GridPin.h  IncrementalSearchGrids.h  Location.h  MultipinRoute.cpp  MultipinRoute.h  PcbRouter.i  PcbRouterBoost.h  PostProcessing.cpp  PostProcessing.h  Rasterizer.h  frTime.cpp  globalParam.cpp  globalParam.h  kicadPcbDataBase.cpp  kicadPcbDataBase.h  main.cpp  mymath.h  pathfinder.cpp  plotter.cpp  plotter.h  util.h
